[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ae_llm_navigation_decisions"
version = "0.1.0"
description = "Use of LLM models to provide high level semantic navigation decisions"
authors = [{ name = "Arturs Elksnis" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "transformers",
    "mistral-common",
    "bitsandbytes>=0.46.1",
    "ollama",
    "accelerate",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ae_semantic_navigation = ["models/*.json", "models/*.pkl"]